# morpheus-pseudopodia

./: .editorconfig  .gitignore  CHANGELOG.md  CHANGES  CMakeLists.txt  Doxyfile  LICENSE  LICENSE.md  LICENSE.rtf  Package.cmake  PackageBundle.cmake  PackageDEB.cmake  PackageNSIS.cmake  README.md  version.h.in
gui/: CMakeLists.txt  Doxyfile  about_model.cpp  about_model.h  abstractattribute.cpp  abstractattribute.h  abstractprocess.cpp  abstractprocess.h  addattrdialog.cpp  addattrdialog.h  announcement.cpp  announcement.h  attrcontroller.cpp  attrcontroller.h  config.cpp  config.h  docu_dock.cpp  docu_dock.h  domnodeeditor.cpp  domnodeeditor.h  domnodeviewer.cpp  domnodeviewer.h  equationhighlighter.cpp  equationhighlighter.h  ext_files.rc.in  feedback.cpp  feedback.h  generated_files.qrc.in  graphviz_renderer.qrc  icons.qrc  imagetable.cpp  imagetable.h  infoaction.cpp  infoaction.h  job_progress_delegate.cpp  job_progress_delegate.h  job_queue.cpp  job_queue.h  jobcontroller.cpp  jobcontroller.h  (+55 more)
gui/appdoc/: CMakeLists.txt  Doxyfile  doxygen_footer.html  doxygen_header.html  dynsections.js  mathjax.qhp.in  morpheus.doxy.in  morpheus.qhcp.in  morpheus_style.css  patch_qhp.cmake.in
gui/data/: autofix_rules.txt  feedback_request.html  graph_failed.html  graph_generating.html  model_graph_renderer.html  model_graph_viewer.css  model_graph_viewer.html  morpheusProxy_SLURM.sh  no_announcement.html  processProxy.sh  template.html
gui/data/js/: d3-graphviz.2.6.1.js  test2.html
gui/icons/: CMakeLists.txt  resize_icons.sh
gui/icons/EX-Impression/: index.theme
gui/icons/McMojave/: index.theme
gui/icons/McMojave-dark/: index.theme
gui/icons/mac/: Info.plist  icon.hqx  morpheus-running-sweep.icns  morpheus-running.icns  morpheus.icns  startup.sh
gui/icons/win/: morpheus.rc
gui/morpheusML/: model_attribute.cpp  model_attribute.h  model_node.cpp  model_node.h  morpheus_model.cpp  morpheus_model.h  morpheus_model_desc.h  morpheus_xml.cpp  morpheus_xml.h  nodeadapter.cpp  nodeadapter.h  paramsweepmodel.cpp  paramsweepmodel.h
gui/widgets/: checkboxlist.cpp  checkboxlist.h  equationhighlighter.cpp  mathtextedit.cpp  mathtextedit.h  webviewer.cpp  webviewer.h  xmlhighlighter.cpp
morpheus/: CMakeLists.txt  README  merge.xslt
morpheus/core/: CMakeLists.txt  ClassFactory.h  base_types.xsd  cell.cpp  cell.h  cell_membrane_accessor.cpp  cell_membrane_accessor.h  cell_property_accessor.h  cell_update.cpp  cell_update.h  celltype.cpp  celltype.h  config.h.cmake  container.h  cpm.cpp  cpm.h  cpm_layer.cpp  cpm_layer.h  cpm_p.h  cpm_sampler.cpp  cpm_sampler.h  cpm_sampler.xsd  cpm_shape.cpp  cpm_shape.h  cpm_shape_tracker.cpp  cpm_shape_tracker.h  cpp_future.h  data_mapper.cpp  data_mapper.h  delay.cpp  delay.h  delay.xsd  diff_eqn.cpp  diff_eqn.h  diff_eqn.xsd  diffusion.cpp  diffusion.h  docu.h  domain.cpp  domain.h  (+87 more)
morpheus/core/tests/: CMakeLists.txt
morpheus/plugins/: CMakeLists.txt
morpheus/plugins/analysis/: 3D-stack-logger.cpp  3D-stack-logger.h  CMakeLists.txt  NetworkLogger.cpp  NetworkLogger.h  NetworkLogger.xsd  cell_tracker.cpp  cell_tracker.h  cell_tracker.xsd  clustering_tracker.cpp  clustering_tracker.h  clustering_tracker.xsd  contact_logger.cpp  contact_logger.h  contact_logger.xsd  dependency_graph.cpp  dependency_graph.h  dependency_graph.xsd  displacement_tracker.cpp  displacement_tracker.h  displacement_tracker.xsd  external.cpp  external.h  external.xsd  external.xsd~HEAD  gnuplotter.cpp  gnuplotter.h  gnuplotter.xsd  histogram_logger.cpp  histogram_logger.h  histogram_logger.xsd  logger.cpp  logger.h  logger.xsd  logger2.cpp  logger2.h  logger2.xsd  membraneLogger.cpp  membraneLogger.h  membraneLogger.xsd  (+23 more)
morpheus/plugins/examples/: CMakeLists.txt  example_boundingbox_symbol.cpp  example_boundingbox_symbol.h  example_boundingbox_symbol.xsd  example_external_symbol.cpp  example_external_symbol.h  example_external_symbol.xsd  example_plugin.h  example_timeavg_reporter.cpp  example_timeavg_reporter.h  example_timeavg_reporter.xsd
morpheus/plugins/initialization/: CMakeLists.txt  csv_reader.cpp  csv_reader.h  csv_reader.xsd  init_cell_lattice.cpp  init_cell_lattice.h  init_cell_lattice.xsd  init_cell_objects.cpp  init_cell_objects.h  init_cell_objects.xsd  init_circle.cpp  init_circle.h  init_circle.xsd  init_distrib.cpp  init_distrib.h  init_distrib.xsd  init_hex_lattice.cpp  init_hex_lattice.h  init_hex_lattice.xsd  init_poisson_disc.cpp  init_poisson_disc.h  init_poisson_disc.xsd  init_poisson_disk.cpp  init_poisson_disk.h  init_poisson_disk.xsd  init_rectangle.cpp  init_rectangle.h  init_rectangle.xsd  init_voronoi.cpp  init_voronoi.h  init_voronoi.xsd  initpdedata.xsd  initpdeexpression.xsd  initspherecell.cpp  remove_cells.cpp  remove_cells.h  remove_cells.xsd  tiff_reader.cpp  tiff_reader.h  tiff_reader.xsd
morpheus/plugins/interaction/: CMakeLists.txt  add_on_adhesion.cpp  add_on_adhesion.h  add_on_adhesion.xsd  anisotropic_adhesion.cpp  anisotropic_adhesion.h  heterophilic_adhesion.cpp  heterophilic_adhesion.h  heterophilic_adhesion.xsd  homophilic_adhesion.cpp  homophilic_adhesion.h  homophilic_adhesion.xsd  mechanical_link.cpp  mechanical_link.h  mechanical_link.xsd
morpheus/plugins/miscellaneous/: CMakeLists.txt  add_cell.cpp  add_cell.h  add_cell.xsd  cell_death.cpp  cell_death.h  cell_death.xsd  cell_division.cpp  cell_division.h  cell_division.xsd  change_celltype.cpp  change_celltype.h  change_celltype.xsd  env_dissipation.cpp  env_dissipation.h  example_plugin.cpp  example_plugin.h  example_plugin.xsd  fluidsecretion.cpp  fluidsecretion.h  fluidsecretion.xsd  fusion.cpp  fusion.h  fusion.xsd  gab_pseudopodia.cpp  gab_pseudopodia.h  gab_pseudopodia.xsd  insert_medium.cpp  insert_medium.h  insert_medium.xsd  membraneRules3D.cpp  membraneRules3D.h  membraneRules3D.xsd  membraneRules3D2.cpp  membraneRules3D2.h  membranerules.cpp  (+8 more)
morpheus/testing/: CMakeLists.txt  model.xml  model_test.cpp  model_test.h  ressources.cpp.in  test_operators.cpp  test_operators.h
tests/morpheus/: CMakeLists.txt  CMakeLists_GTest.txt.in  CMake_GTest.txt
(+186 files in other folders)
